Fixed overflow-x. In progress: userprofile.css

--- a/public/css/userprofile.css
+++ b/public/css/userprofile.css
@@ -6,6 +6,7 @@
 * {
   font-family: Raleway;
   color: #B4CDED;
+  box-sizing: border-box;
 }
 
 body {
@@ -15,129 +16,22 @@ body {
   background-color: #B4CDED;
 }
 
-.center {
-  display: grid;
-  align-items: center;
-  justify-content: center;
-}
-
-.image {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#header-container {
-  grid-area: header;
-  width: 100vw;
-  background-color: #344966;
-}
-
-#header-container header {
-  display: grid;
-  grid-template-columns: 7vh auto;
-  column-gap: 10px;
-  align-items: center;
-  width: fit-content;
-  margin: 1.5vh auto;
-}
-
-#header-container #logo {
-  height: 7vh;
-}
-
-#header-container h1 {
-  width: fit-content;
-  margin: auto;
-  font-size: 40pt;
-  color: #ff575a !important;
-}
-
-
-/* #general-container {
-    display: grid;
-    height: inherit;
-    width: inherit;
-    grid-template-areas: "header" "login-form";
-    grid-template-columns: auto;
-    grid-template-rows: 10vh auto auto;
-    justify-items: center;
-    margin: auto;
-  } */
-
 #general-container {
   display: grid;
-  height: 100vh;
-  width: 100vw;
-  grid-template-areas: "left-bar main right-bar";
-  grid-template-columns: 15% 70% 15%;
+  height: inherit;
+  width: inherit;
+  grid-template-areas: "left-nav main";
+  grid-template-columns: 15% 85%;
   justify-items: center;
   margin: auto;
   overflow-x: hidden;
 }
 
-.info {
-  display: grid;
-  grid-area: login-form;
-  row-gap: 20px;
-  width: 35vw;
-  height: fit-content;
-  margin-top: 60px;
-  padding: 20px;
+#top-nav {
+  display: none;
 }
 
-.info [type="button"],
-[type="submit"] {
-  padding: 32px 28px;
-  border: 3px solid #ff575a;
-  border-radius: 40px;
-  font-size: 13pt;
-  font-weight: 600;
-  color: #f0f4ef;
-  background-color: #ff575a;
-  cursor: pointer;
-}
-
-.info [type="username"],
-[type="email"],
-[type="password"],
-[type="age"] {
-  padding: 20px;
-  border: 3px solid #344966;
-  border-radius: 7px;
-  color: #B4CDED;
-  background-color: #0D1821;
-  font-size: 13pt;
-  font-weight: 600;
-}
-
-.upload-btn-wrapper {
-  position: relative;
-  overflow: hidden;
-  display: grid;
-  justify-content: center;
-  align-items: center;
-}
-
-.btn {
-  border: 6px solid #ff575a;
-  color: #f0f4ef;
-  background-color: #ff575a;
-  padding: 32px 28px;
-  border-radius: 40px;
-  font-size: 13pt;
-  font-weight: 600;
-}
-
-.upload-btn-wrapper input[type=file] {
-  font-size: 100px;
-  position: absolute;
-  left: 0;
-  top: 0;
-  opacity: 0;
-}
-
-#left-bar {
+#left-nav {
   display: grid;
   width: 100%;
   height: 100%;
@@ -147,42 +41,99 @@ body {
   background-color: #0D1821;
 }
 
-#left-bar #logo {
+#left-nav #logo {
   display: grid;
   justify-items: center;
 }
 
-#left-bar #logo img {
+#left-nav #logo img {
   width: 50%;
 }
 
-#left-bar #menu {
+#left-nav #menu {
   display: grid;
   grid-template-rows: repeat(7, 1fr);
 }
 
-#left-bar #menu a {
+#left-nav #menu a {
   display: grid;
   grid-template-columns: 40px auto;
 }
 
-#left-bar #menu a i {
+#left-nav #menu a i {
   font-size: 17pt;
 }
 
-#left-bar #menu a p {
+#left-nav #menu a p {
   margin: 0;
 }
 
-#left-bar a {
+#left-nav a {
   text-decoration: none;
 }
 
-a [href="/logout"] {
+#left-nav a [href="/logout"] {
   text-decoration: none;
 }
 
-#topnav {
+main {
+  display: grid;
+  width: 100%;
+  justify-items: center;
+  align-items: center;
+}
+
+main #profile {
+  display: grid;
+  height: 80%;
+  width: 80%;
+  grid-template-columns: 30% 70%;
+}
+
+main #profile h1 {
+  color: #0D1821;
+}
+
+main #profile #profile-picture {
+  display: grid;
+  justify-items: center;
+}
+
+main #profile #profile-picture img {
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+main #profile #profile-picture input {
+  width: 50%;
+  border: 3px solid #ff575a;
+  border-radius: 40px;
+  font-size: 17pt;
+  background: #ff575a;
+}
+
+main #profile #profile-picture #image-upload {
+  display: none;
+}
+
+main #profile #profile-picture .image-upload-wrapper {
+  display: inline-block;
+  width: 50%;
+  border: 3px solid #ff575a;
+  border-radius: 40px;
+  font-size: 13pt;
+  text-align: center;
+  cursor: pointer;
+  background: #ff575a;
+}
+
+main #profile #profile-picture .image-upload-wrapper p {
+  margin: 3px;
+}
+
+main #edit {
   display: none;
 }
 
@@ -198,7 +149,7 @@ a [href="/logout"] {
     justify-items: center;
     overflow-x: hidden;
   }
-  #topnav {
+  #top-nav {
     display: grid;
     grid-template-areas: "top-logo ." "top-menu top-menu";
     grid-template-columns: 30% 70%;
@@ -207,7 +158,7 @@ a [href="/logout"] {
     position: relative;
     background-color: #0D1821;
   }
-  #topnav #top-menu {
+  #top-nav #top-menu {
     display: none;
     padding: 20px 0;
     z-index: 1;
@@ -215,12 +166,12 @@ a [href="/logout"] {
     row-gap: 20px;
     background-color: #0D1821;
   }
-  #topnav #top-menu a {
+  #top-nav #top-menu a {
     padding-left: 10px;
     text-decoration: none;
     font-size: 17pt;
   }
-  #topnav #top-logo {
+  #top-nav #top-logo {
     display: grid;
     grid-template-columns: 40% 60%;
     grid-area: top-logo;
@@ -230,19 +181,19 @@ a [href="/logout"] {
     font-size: 17px;
     color: #B4CDED;
   }
-  #topnav img {
+  #top-nav img {
     height: 7vh;
   }
-  #topnav h1 {
+  #top-nav h1 {
     margin: 0;
   }
-  #topnav #hamburger {
+  #top-nav #hamburger {
     position: absolute;
     right: 10px;
     top: 10px;
     font-size: 20pt;
   }
-  #topnav #hamburger:hover {
+  #top-nav #hamburger:hover {
     cursor: pointer;
     background-color: #0D1821;
     color: #B4CDED;
@@ -251,7 +202,7 @@ a [href="/logout"] {
     background-color: #0D1821;
     color: #B4CDED;
   }
-  #left-bar {
+  #left-nav {
     display: none;
   }
   #main {
